2011-01-08  Balazs Kelemen  <kbalazs@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt][WK2] QWKView does not propagate show and hide events to the drawing area
        https://bugs.webkit.org/show_bug.cgi?id=52108

        * UIProcess/API/qt/qgraphicswkview.cpp:
        (QGraphicsWKView::event): Call setPageIsVisible on the drawing area
        if the event is Show or Hide.

2011-01-08  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt][Symbian] Make sure WebKit headers are included before platform headers on Symbian
        https://bugs.webkit.org/show_bug.cgi?id=31273

        On Symbian PREPEND_INCLUDEPATH is the best way to make sure that WebKit headers
        are included before platform headers. On all other platforms continue to use
        INCLUDEPATH (as before).

        * WebKit2.pro:

2011-01-08  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt][WK2] Unreviewed buildfix after r75313.

        * Scripts/generate-forwarding-headers.pl:

2011-01-08  Adam Barth  <abarth@webkit.org>

        Moving WebCore changes the layout of the Qt build directory as well,
        which means we need to change where we look for these generated files.

        * DerivedSources.pro:

2011-01-07  Adam Barth  <abarth@webkit.org>

        Rubber-stamped by Eric Seidel.

        Move WebCore to Source
        https://bugs.webkit.org/show_bug.cgi?id=52050

        * WebKit2.pro:

2011-01-07  Stephanie Lewis  <slewis@apple.com>

        Reviewed by Geoff Garen.

        <rdar://problem/8649617> Migrate memory tracking from Safari to WebKit
        https://bugs.webkit.org/show_bug.cgi?id=50799 Add Memory Sampler to WebKit
        
        Add a sampler for printing off process memory statistics.
        This tool can track:
                
                WebCore
                   - FastMalloc allocations bytes              (in use or committed)
                JavaScriptCore